[package]
name = "srtp2-sys"
version = "3.0.2"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]
edition = "2018"
links = "srtp2"
build = "build.rs"

description = "Binding for libsrtp2"
documentation = "https://docs.rs/srtp2-sys/3.0.0/srtp2_sys"
repository = "https://github.com/HyeonuPark/srtp2-sys"
keywords = ["srtp", "rtp"]
categories = ["multimedia", "network-programming", "external-ffi-bindings"]
license = "BSD-3-Clause"

[dependencies]
openssl-sys = { version = "0.9", optional = true }

[build-dependencies]
bindgen = "0.55"
pkg-config = "0.3"
make-cmd = { version = "0.1.0", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[features]
skip-linking = []
build = ["make-cmd"]
enable-openssl = ["openssl-sys"]
build-openssl = ["enable-openssl", "openssl-sys/vendored"]

[package.metadata.docs.rs]
features = ["skip-linking", "enable-openssl"]

# not used by build.rs
[package.metadata.pkg-config]
libsrtp2 = "2.3.0"
